Remove `dist` from --file pushing

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Publish Thunderstore Package"
+name: "Publish Thunderstore Package Custom"
 description: "Formats and uploads a Thunderstore package"
 author: "dhkatz"
 branding:
